--- a/sap/webapp/templates/prueba.html
+++ b/sap/webapp/templates/prueba.html
@@ -8,5 +8,20 @@
 </head>
 <body>
   <h1>Sistema de Administracion de Personas S.A.P.</h1>
+  <!-- <div>
+    {{msg1}}
+  </div>
+  <div>
+    {{msg2}}
+  </div>
+  <div>
+    {%for item in lista%}
+    <p>{{item}}</p>
+    {% endfor %}
+    {{dic}}
+  </div> -->
+  <div>
+    Numero de personas: {{numPersonas}}
+  </div>
 </body>
 </html>
